// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BccGraphic > renders checked 1`] = `
"<div class=\\"bcc-graphic-wrapper\\">
  <!--v-if--><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-graphic-check-icon\\">
    <path d=\\"m424-408-86-86q-11-11-28-11t-28 11q-11 11-11 28t11 28l114 114q12 12 28 12t28-12l226-226q11-11 11-28t-11-28q-11-11-28-11t-28 11L424-408Zm56 328q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z\\"></path>
  </svg>
  <div class=\\"relative h-full\\">
    <div class=\\"bcc-graphic-poster\\" style=\\"background-image: url(https://event.bcc.no/wp-content/uploads/2023/10/Background-7.png); border-radius: 12px;\\"><img class=\\"h-3/4\\" src=\\"https://event.bcc.no/wp-content/uploads/2023/11/BUK4_Logo-Main.svg\\"></div>
  </div>
</div>"
`;

exports[`BccGraphic > renders graphic 1`] = `
"<div class=\\"bcc-graphic-wrapper\\">
  <!--v-if-->
  <!--v-if-->
  <div class=\\"relative h-full\\">
    <div class=\\"bcc-graphic-poster\\" style=\\"background-image: url(https://event.bcc.no/wp-content/uploads/2023/10/Background-7.png); border-radius: 12px;\\"><img class=\\"h-3/4\\" src=\\"https://event.bcc.no/wp-content/uploads/2023/11/BUK4_Logo-Main.svg\\"></div>
  </div>
</div>"
`;

exports[`BccGraphic > renders link out 1`] = `
"<div class=\\"bcc-graphic-wrapper\\">
  <div class=\\"bcc-graphic-open-in\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-graphic-open-in-icon\\">
      <path d=\\"M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h240q17 0 28.5 11.5T480-800q0 17-11.5 28.5T440-760H200v560h560v-240q0-17 11.5-28.5T800-480q17 0 28.5 11.5T840-440v240q0 33-23.5 56.5T760-120H200Zm560-584L416-360q-11 11-28 11t-28-11q-11-11-11-28t11-28l344-344H600q-17 0-28.5-11.5T560-800q0-17 11.5-28.5T600-840h240v240q0 17-11.5 28.5T800-560q-17 0-28.5-11.5T760-600v-104Z\\"></path>
    </svg></div>
  <!--v-if-->
  <div class=\\"relative h-full\\">
    <div class=\\"bcc-graphic-poster\\" style=\\"background-image: url(https://event.bcc.no/wp-content/uploads/2023/10/Background-7.png); border-radius: 12px;\\"><img class=\\"h-3/4\\" src=\\"https://event.bcc.no/wp-content/uploads/2023/11/BUK4_Logo-Main.svg\\"></div>
  </div>
</div>"
`;

exports[`BccGraphic > renders rounding 1`] = `
"<div class=\\"bcc-graphic-wrapper\\">
  <!--v-if-->
  <!--v-if-->
  <div class=\\"relative h-full\\">
    <div class=\\"bcc-graphic-poster\\" style=\\"border-radius: 6px;\\"><img class=\\"h-3/4\\" src=\\"https://event.bcc.no/wp-content/uploads/2023/11/BUK4_Logo-Main.svg\\"></div>
  </div>
</div>"
`;
